<resources>
    <string name="app_name">Coding Blocks Online</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recommended_courses">Recommended Courses</string>
    <string name="title_activity_my_course">MyCourseActivity</string>
    <string name="course_progress">Course Progress : </string>
    <string name="title_activity_settings">Settings</string>
    <string name="intro_slide_title_1">Learn from the best in\n the industry</string>
    <string name="intro_slide_title_2">Learn on the go\n anytime, anywhere</string>
    <string name="intro_slide_title_3">Resolve all your doubts with\n TA’s &amp; Mentors</string>
    <string name="intro_slide_message_1">Experienced, engaging instructors take you\n through course material, step by step, in our\n high-quality video lessons.</string>
    <string name="intro_slide_message_2">You can learn anytime, anywhere with our all\n new android app. Download and save videos\n offline.</string>
    <string name="intro_slide_message_3">Get exclusive access to Live Webinars where\n you can interact with mentors for important\n course topics &amp; can solve all your doubts.</string>
    <string name="empty_notes_title">No Notes</string>
    <string name="empty_notes_text">Take important notes while accessing the content</string>
    <string name="empty_bookmark_title">No Bookmarks</string>
    <string name="empty_bookmark_text">You do not have any bookmarks. Start \nbookmarking important sections.</string>
    <string name="empty_download_title">No Downloads</string>
    <string name="empty_download_text">Video lectures that you download appear here</string>
    <string name="verify_desc">You need to verify your account first before continuing</string>
    <string name="verify_title">Verify Now</string>
    <string name="enroll_desc">You have been successfully enrolled into this course</string>
    <string name="login_now">Login Now</string>
    <string name="tollfree_number">+1800 274 4504</string>
    <string name="email_cb">Admissions@Codingblocks.com</string>
    <string name="pitampura_address">1st Floor, 47, Nishant Kunj, Main Pitampura Road, New Delhi Near Kohat Enclave Metro Station(Exit from Gate # 2)(Opposite Pillar 337)</string>
    <string name="phone1_1">011 - 47052584</string>
    <string name="phone1_2">011 - 27354126</string>
    <string name="email1_1">priyanka.dagar@codingblocks.com</string>
    <string name="noida_address">Coding Blocks Noida, First Floor, A-73, Sector-2 (50m from Sector-15 Metro Station), Noida - 201301</string>
    <string name="phone2_1">9999579111</string>
    <string name="phone2_2">9999579222</string>
    <string name="email2_1">varun@codingblocks.com</string>
    <string name="dwarda_address">2nd Floor, Plot No. 3, Sector 11, Dwarka, New Delhi (Near Dwarka Sec-11 Metro)</string>
    <string name="phone3_1">8588801217</string>
    <string name="phone3_2">9811228053</string>
    <string name="email3_1">rajesh@codingblocks.com</string>
    <string name="dwarka_head">Mr. Rajesh Sachdev</string>
    <string name="noida_head">Mr. Varun Kohli</string>
    <string name="pitampura_head">Mrs. Priyanka Dagar</string>
    <string name="pitampura">Pitampura\n(Corporate Office)</string>
    <string name="noida_center">NOIDA CENTER</string>
    <string name="dwarka_center">DWARKA CENTER</string>
    <string name="our_centres">OUR CENTRES</string>
    <string name="contact">Contact</string>
    <string name="notifications">Notifications</string>
    <string name="clean_dialog_title">You have reached your data limit!</string>
    <string name="clean_dialog_description">If you want to continue with the download, Please clear the oldest download.</string>
    <string name="clean_dialog_okBtn">Clear Oldest Download</string>
    <string name="clean_dialog_cancelBtn">Change Settings</string>
    <string name="recommended_courses_description">Based on the industry trends, you should complete these courses</string>
    <string name="applied">Applied</string>
    <string name="job_eligible">Status:  Eligible</string>
    <string name="job_not_eligible">Status:  Not Eligible</string>
    <string name="job_applied">You\'ve already applied for the job</string>
    <string name="filter_location">Location</string>
    <string name="filter_job_type">Job Type</string>
    <string name="empty_live_doubt">No Live requests. Keep this tab open, new doubts will appear here instantly</string>
    <string name="empty_my_doubt">Nothing Here.Keep up the Good Work!!</string>
    <string name="no_internet">There seems to be an issue with your internet connection.\nPlease Try Again.</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="choose_batch">Choose Batch</string>
    <string name="buy_now">Buy Now</string>
    <string name="try_it_for_free">Try it for Free</string>
    <string name="summary">Summary</string>
    <string name="major_topics_covered">Major Topics Covered</string>
    <string name="course_content">Course Content</string>
    <string name="projects">Projects</string>
    <string name="about_mentors">About Mentors</string>
    <string name="instructors">Instructors</string>
    <string name="mark_resolved">Mark Resolved</string>
    <string name="chat_with_ta">Chat with TA</string>
    <string name="comment">Comment</string>
    <string name="doubts">Doubts</string>
    <string name="my_courses">MyCourses</string>
    <string name="explore">Explore</string>
    <string name="no_doubts">No Doubts</string>
    <string name="click_to_add_doubt">Click on + to ask a doubt.</string>
    <string name="go_to_classroom">Go to Classroom</string>
    <string name="doubts_that_you_ask_appear_here">Doubts that you ask appear here</string>
    <string name="reopen_doubt">Reopen Doubt</string>
    <string name="filter">Filter</string>
    <string name="live_doubts">Live</string>
    <string name="resolved">Resolved</string>
    <string name="all">All</string>
    <string name="recently_accessed">Recently Accessed</string>
    <string name="wishlisted_courses">Wishlisted Courses</string>
    <string name="all_courses">All Courses</string>
    <string name="free_trials">Free Trials</string>
    <string name="active">Active</string>
    <string name="premium">Premium</string>
    <string name="expired_courses">Expired Courses</string>
    <string name="buy_extension">Buy Extension</string>
    <string name="doubt_resolved_title">Your doubt has been marked Resolved</string>
    <string name="doubt_resolve_desc">You can still reopen the doubt in “Resolved Doubts” section</string>
    <string name="view_resolved">View Resolved</string>
    <string name="view_live_doubts">View Live Doubts</string>
    <string name="doubt_reopen_desc">You can view your doubt in “Live Doubts” section</string>
    <string name="doubt_reopen_title">Your doubt has been reopened!</string>
    <string name="continue_learning">Continue Learning</string>
    <string name="view_profile">View Profile</string>
    <string name="help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="settings">Settings</string>
    <string name="my_purchases">My Purchases</string>
    <string name="hiring_blocks">Hiring Blocks</string>
    <string name="login_signup">Login/Signup</string>
    <string name="browse_courses">Browse Courses</string>
    <string name="filters">Filters</string>
    <string name="resume">Resume</string>
    <string name="contents">Contents</string>
    <string name="library">Library</string>
    <string name="curriculum">Curriculum</string>
    <string name="dashboard">Dashboard</string>
    <string name="course_announcements">Course Announcements</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="my_downloads">My Downloads</string>
    <string name="notes">Notes</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="downloads">Downloads</string>
    <string name="announcements">Announcements</string>
    <string name="hello">Hello </string>
    <string name="your_performance">Your Performance</string>
    <string name="explore_courses">Explore Courses</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="empty_library">Your library will start showing once you enroll in any course</string>
    <string name="save">Save</string>
    <string name="login_with">Login with</string>
    <string name="mobile_or_email">Mobile Number or Email ID</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="performance_graph">Performance Graph</string>
    <string name="enter_mobile_number_for_verification">Enter mobile number for verification</string>
    <string name="complete_your_profile">Complete your Profile</string>
    <string name="complete_desc">While we are personalizing your dashboard experience, complete your profile.</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="college">College</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="use_email">Use Email</string>
    <string name="proceed">Proceed</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="branch">Branch</string>
    <string name="skip">Skip</string>
    <string name="continue_to_dashboard">Continue to dashboard</string>
    <string name="password">Password</string>
    <string name="number_desc">Use your number to login to your account</string>
    <string name="welcome">Welcome to Coding Blocks</string>
    <string name="email_title">Enter Email Address for verification</string>
    <string name="email_desc">Use your email ID to login to your account</string>
    <string name="noted_del_msg">Note has been Deleted</string>
    <string name="edit_note">Edit Note</string>
    <string name="add_note">Add a Note</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="view">View</string>
    <string name="total_questions">Total Questions:</string>
    <string name="maximum_marks">Maximum Marks:</string>
    <string name="question_type">Question Type:</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="view_questions">View Questions</string>
    <string name="hide_questions">Hide Questions</string>
    <string name="end">End</string>
    <string name="what_do_you_want_to_become">What do you want to become ?</string>
    <string name="card_title">The Technology Learning Platform</string>
    <string name="view_all_courses">View all Courses</string>
    <string name="popular_courses">Popular Courses</string>
    <string name="popular_desc">The most popular courses of em all!</string>
    <string name="track_desc">Tracks designed to shape your future!</string>
    <string name="view_all">View all</string>
    <string name="trending_now">Trending Now</string>
    <string name="trending_desc">Industry trending tech courses for you!</string>
    <string name="learning_tracks">Learning Tracks</string>
    <string name="inbox">Inbox</string>
    <string name="signup_desc">Let’s get you onboard</string>
    <string name="username">Username</string>
    <string name="back">Back</string>
    <string name="payment_failed">Your payment has failed!</string>
    <string name="internet_connection_error">Please check your internet connection</string>
    <string name="retry">Retry Now</string>
    <string name="no_take_me_back">No, Take me back</string>
    <string name="pause_now">Pause Now</string>
    <string name="are_you_sure_you_want_to_pause">Are you sure you want to pause?</string>
</resources>