<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard_explore"
        android:icon="@drawable/ic_chart_line"
        android:title="@string/explore" />


    <item
        android:id="@+id/dashboard_courses"
        android:icon="@drawable/ic_conversation"
        android:title="@string/my_courses" />

    <item
        android:id="@+id/dashboard_home"
        android:icon="@drawable/ic_speech"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/dashboard_doubts"
        android:icon="@drawable/ic_speech"
        android:title="@string/doubts" />

    <item
        android:id="@+id/dashboard_library"
        android:icon="@drawable/ic_speech"
        android:title="@string/library" />

</menu>
