<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_hiring"
            android:visible="false"
            android:icon="@drawable/ic_hiring"
            android:title="@string/hiring_blocks" />
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/ic_purchase"
            android:title="@string/my_purchases"
            android:visible="false" />
        <item
            android:id="@+id/nav_tracks"
            android:icon="@drawable/ic_tracks"
            android:title="@string/learning_tracks"
            android:visible="true" />

        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_chat"
            android:title="@string/inbox"
            android:visible="false" />

    </group>

    <group
        android:id="@+id/features"
        android:checkableBehavior="none"
        android:menuCategory="system">

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_chat"
            android:title="@string/admin_panel"
            android:visible="false" />
    </group>
    <group
        android:id="@+id/communication"
        android:checkableBehavior="none"
        android:menuCategory="system">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_help"
            android:title="@string/help_amp_feedback" />
        <item
            android:id="@+id/nav_contatus"
            android:icon="@drawable/ic_comment_small"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/footer_spacer_1"
            android:checkable="false"
            android:enabled="false"
            android:orderInCategory="200"
            android:title="" />
        <item
            android:id="@+id/footer_spacer_2"
            android:checkable="false"
            android:enabled="false"
            android:orderInCategory="200"
            android:title="" />
    </group>

</menu>
