<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/failed"
        android:layout_marginTop="@dimen/margin_xxxl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:visibility="visible"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:fontFamily="@font/gilroy_bold"
        android:textColor="@color/pastel_red"
        android:text="@string/payment_failed"
        tools:text="@string/payment_failed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:visibility="visible"
        android:fontFamily="@font/gilroy_medium"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/internet_connection_error"
        tools:text="@string/internet_connection_error" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retryBtn"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin_xxl"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/retry" />

</LinearLayout>
