<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/margin_large"
    android:paddingEnd="@dimen/margin_large"
    tools:context="com.codingblocks.cbonlineapp.auth.onboarding.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/numberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xl"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/welcome"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/numberDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/signup_desc"
                android:textColor="@color/brownish_grey"
                android:textSize="16sp"
                android:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_9xl"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textColorHighlight="@color/orangish"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textColorHighlight="@color/orangish"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textColorHighlight="@color/orangish"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="150dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textColorHighlight="@color/orangish"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/proceedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/margin_xl"
        android:text="@string/proceed"
        android:textSize="20sp" />

</FrameLayout>
