<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dashboardDoubtRoot"
    tools:context="com.codingblocks.cbonlineapp.dashboard.doubts.DashboardDoubtsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dashboardDoubtRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:itemCount="4"
        tools:listitem="@layout/item_doubts" />

    <LinearLayout
        android:id="@+id/emptyLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_comment" />

        <TextView
            android:id="@+id/emptyMessageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/no_doubts"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/emptyDescriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/doubts_that_you_ask_appear_here"
            android:textAlignment="center"
            android:textColor="@color/brownish_grey"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/go_to_classroom" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/internetll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="150dp"
            android:src="@drawable/ic_no_connection"
            android:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="150dp"
            android:text="@string/no_internet"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/dashboardDoubtShimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/dark_white"
        android:visibility="visible">

        <include layout="@layout/item_skeleton_content" />
    </com.facebook.shimmer.ShimmerFrameLayout>

</FrameLayout>

