<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clipChildren="false"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pauseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="40dp"
            android:text="@string/are_you_sure_you_want_to_pause"
            android:layout_marginEnd="@dimen/margin_large"
            android:fontFamily="@font/gilroy_bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pauseDescriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/margin_large"
            android:fontFamily="@font/gilroy_medium"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/divider" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_large">

            <TextView
                android:id="@+id/pauseCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/no_take_me_back"
                android:textColor="@color/orangish" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pauseCourseBtn"
                style="@style/ButtonStyleChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/button_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/pause_now"
                android:textColor="@color/white" />


        </FrameLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/margin_large"
        android:src="@drawable/ic_pause_circle" />

</FrameLayout>
